# crane

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
binder/: environment.yml  postBuild
crane/: __init__.py  __main__.py  api.py  cli.py  pl.py  pp.py  tl.py
crane/compat/: __init__.py  legacy_names.py
crane/core/: __init__.py  bridge.py  cell_response.py  feature_screen.py  iteration.py  output.py  pipeline.py  preprocess.py  sampling.py  scoring.py  step1.py  step2_adapter.py
crane/functional/: __init__.py  cell_vector.py  gene_set.py  gene_vector.py  query.py
crane/internal/: __init__.py  diagnostics.py  legacy_bridge.py  logger.py  precheck.py  safeguards.py
crane/io/: __init__.py  _gene_module_backends.py  result.py  schema.py
crane/step1/: __init__.py  feature_screen.py  preprocess.py  sampling.py  step1.py
crane/step2/: __init__.py  contracts.py  kernels.py  runner.py
demo_data/: README.md  erlotinib_mapk_egfr_genesets.json  progeny_model_human_top200_genesets.json
demo_data/drug_trace_progeny/: manifest.json
demo_data/erlotinib_drug/: manifest.json
demo_data/gsc/: manifest.json
examples/: extension_response_covariates.py  function_response_erlotinib.py  function_response_progeny.py  online_demo.ipynb  quickstart.py  rebuild_demo_data.py  scanpy_warmup.py
